feat: list user apartments controller
